initial slack auth flow
